--- a/first/Gemfile
+++ b/first/Gemfile
@@ -12,6 +12,10 @@ gem "pg", "~> 1.1"
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", "~> 5.0"
 
+gem "active_model_serializers", "~> 0.10.13"
+gem "case_transform", "~>0.2"
+gem "jsonapi-renderer", "~>0.2.2"
+
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 # gem "jbuilder"
 
