--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /first/.bundle
+/first/.idea
 
 /first/log/*
 /first/tmp/*
@@ -16,3 +17,4 @@
 !/first/tmp/storage/.keep
 
 /first/config/master.key
+/second/.idea
