--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,12 @@
 !/first/tmp/storage/.keep
 
 /first/config/master.key
-/second/.idea      
+/second/.idea
+
 /third/.idea
 /third/.bundle
 /third/vendor
+
+/fourth/.idea
+/fourth/.bundle
+/fourth/vendor
