--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,22 @@
 /fourth/.idea
 /fourth/.bundle
 /fourth/vendor
+/fifth/.bundle
+/fifth/.idea
+
+/fifth/log/*
+/fifth/tmp/*
+!/fifth/log/.keep
+!/fifth/tmp/.keep
+
+/fifth/tmp/pids/*
+!/fifth/tmp/pids/
+!/fifth/tmp/pids/.keep
+
+/fifth/storage/*
+!/fifth/storage/.keep
+/fifth/tmp/storage/*
+!/fifth/tmp/storage/
+!/fifth/tmp/storage/.keep
+
+/fifth/config/master.key
